--- a/InPrint/app/src/main/res/layout/activity_main.xml
+++ b/InPrint/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/ipEnterButton"
+        android:id="@+id/dataEnterButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/titleIp"
@@ -46,7 +46,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text=" "
-        app:layout_constraintBottom_toTopOf="@+id/ipEnterButton"
+        app:layout_constraintBottom_toTopOf="@+id/dataEnterButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleIp" />
