--- a/InPrint/app/src/main/res/layout/activity1.xml
+++ b/InPrint/app/src/main/res/layout/activity1.xml
@@ -5,19 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#88FF88"
+    android:background="#000000"
     tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_home"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -31,50 +20,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
 
-    <Button
-        android:id="@+id/dataEnterButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/titleIp"
-        android:elevation="0dp"
-        android:text="Enter"
-        tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="326dp"
-        tools:ignore="MissingConstraints" />
+    ;
 
-    <EditText
-        android:id="@+id/ipEnter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="62dp"
-        android:layout_marginTop="215dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="17dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=" "
-        app:layout_constraintBottom_toTopOf="@+id/dataEnterButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/titleIp"
-        android:layout_width="wrap_content"
-        android:layout_height="54dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="139dp"
-        android:text="Please Enter Your IP"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/ipEnter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.078"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />;
-    tools:layout_editor_absoluteX="38dp"
-    tools:layout_editor_absoluteY="30dp" />
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="362dp"
+        android:layout_height="682dp"
+        android:layout_above="@id/navigation"
+        android:layout_marginBottom="7dp"
+        android:background="#000000"
+        android:src="@drawable/loading"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="24dp" />
 
 </android.support.constraint.ConstraintLayout>
