--- a/InPrint/app/src/main/res/layout/activity1.xml
+++ b/InPrint/app/src/main/res/layout/activity1.xml
@@ -11,11 +11,14 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
+        android:layout_height="53dp"
+        android:background="#222222"
+        android:fadingEdge="vertical"
+        android:fadingEdgeLength="40dp"
+        app:itemIconTint="#DDDDDD"
+        app:itemTextColor="#DDDDDD"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
