--- a/InPrint/app/src/main/res/layout/beforelogins.xml
+++ b/InPrint/app/src/main/res/layout/beforelogins.xml
@@ -8,34 +8,16 @@
     android:background="#000000"
     tools:context=".MainActivity">
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="53dp"
-        android:background="#222222"
-        android:fadingEdge="vertical"
-        android:fadingEdgeLength="40dp"
-        app:itemIconTint="#DDDDDD"
-        app:itemTextColor="#DDDDDD"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
-
-    ;
-
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifImageView"
         android:layout_width="362dp"
         android:layout_height="682dp"
         android:layout_above="@id/navigation"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:background="#000000"
         android:src="@drawable/loading"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,11 +26,21 @@
         android:id="@+id/fingerprintview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="100dp"
+        tools:layout_editor_absoluteX="206dp"
+        tools:layout_editor_absoluteY="93dp" />
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="427dp"
+        android:layout_height="57dp"
         android:layout_marginEnd="8dp"
+        android:background="#222222"
+        android:fadingEdge="vertical"
+        android:fadingEdgeLength="40dp"
+        app:itemIconTint="#DDDDDD"
+        app:itemTextColor="#DDDDDD"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/gifImageView" />
-
+        app:menu="@menu/navigation" />
 </android.support.constraint.ConstraintLayout>
