--- a/InPrint/app/src/main/res/layout/activity1.xml
+++ b/InPrint/app/src/main/res/layout/activity1.xml
@@ -10,17 +10,19 @@
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="53dp"
+        android:layout_width="417dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="#222222"
         android:fadingEdge="vertical"
         android:fadingEdgeLength="40dp"
+        android:hapticFeedbackEnabled="false"
         app:itemIconTint="#DDDDDD"
         app:itemTextColor="#DDDDDD"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/navigation" />
 
     ;
