--- a/InPrint/app/src/main/res/layout/activity1.xml
+++ b/InPrint/app/src/main/res/layout/activity1.xml
@@ -27,6 +27,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="32dp"
         android:background="#222222"
         android:fadingEdge="vertical"
         android:fadingEdgeLength="40dp"
