--- a/InPrint/app/src/main/res/layout/activity2.xml
+++ b/InPrint/app/src/main/res/layout/activity2.xml
@@ -22,7 +22,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
-
+<!--
     <Button
         android:id="@+id/dataEnterButton"
         android:layout_width="wrap_content"
@@ -38,6 +38,7 @@
         app:layout_constraintHorizontal_bias="0.008"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
+        -->
 
     <TextView
         android:id="@+id/titleIp"
@@ -116,7 +117,20 @@
         android:textCursorDrawable="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleIp" /><![CDATA[
+        app:layout_constraintTop_toBottomOf="@+id/titleIp" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="242dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="64dp"
+        android:background="@drawable/subbutton"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent" /><![CDATA[
 
     ;
     tools:layout_editor_absoluteX="38dp"
