Capitalization and constraint changes

--- a/InPrint/app/src/main/res/layout/activity2.xml
+++ b/InPrint/app/src/main/res/layout/activity2.xml
@@ -64,7 +64,7 @@
         android:ems="10"
         android:fadingEdge="horizontal|vertical"
         android:fadingEdgeLength="1dp"
-        android:hint="email/username"
+        android:hint="Email/Username"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="#FFFFFF"
@@ -85,7 +85,7 @@
         android:background="#222222"
         android:ems="10"
         android:fadingEdge="horizontal|vertical"
-        android:hint="password"
+        android:hint="Password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="#FFFFFF"
@@ -108,7 +108,7 @@
         android:ems="10"
         android:fadingEdge="horizontal"
         android:fadingEdgeLength="40dp"
-        android:hint="website"
+        android:hint="Website"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:textColor="#FFFFFF"
