--- a/InPrint/app/src/main/res/layout/activity_main.xml
+++ b/InPrint/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
         android:textColorHint="#AAAAAA"
+        android:textCursorDrawable="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/message" />
