--- a/InPrint/app/src/main/res/layout/activity_main.xml
+++ b/InPrint/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,9 @@
         android:hint="IP"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
+        android:textColor="#FFFFFF"
         android:textColorHint="#AAAAAA"
+        android:textColorLink="#FFFFFF"
         android:textCursorDrawable="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
